# NU_ROS2_Spring_2025

./: Homework1.md  README.md  README1.html  README1.md
install/: setup.sh
install/crazy_turtle/lib/crazy_turtle/: mover
install/crazy_turtle/share/crazy_turtle/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/crazy_turtle_interfaces/share/crazy_turtle_interfaces/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/learning_tf2_py/share/learning_tf2_py/: package.sh
log/: latest_build  latest_clean  latest_list
src/homework1/: README.md
src/homework1/turtle_control/: package.xml  setup.py
src/homework1/turtle_interfaces/: CMakeLists.txt  package.xml
src/learning_tf2_py/: package.xml  setup.py
src/my_cpp_pkg/: CMakeLists.txt
src/my_cpp_pkg/src/: my_first_node.cpp
src/my_py_pkg/: setup.py
src/my_python_pkg/: setup.py
src/my_python_pkg1/: package.xml  setup.cfg  setup.py
src/my_robot_bringup/: CMakeLists.txt
src/my_robot_bringup/config/: turtle_params.yaml
src/my_robot_controller/: setup.py
src/my_robot_controller/my_robot_controller/: draw_circle.py
src/my_robot_interfaces/: CMakeLists.txt  package.xml
src/pubsub/: PUBSUB_README.MD  setup.py
src/pubsub/pubsub/: pubsub.py
src/py_srvcli/: package.xml  setup.py
src/turtle_controller/: package.xml  setup.py
src/turtle_controller/turtle_controller/: turtle_controller.py
src/turtle_move/: README.md  package.xml  setup.py
src/turtle_move/launch/: pubsub.launch.xml
src/turtle_move/turtle_move/: turtle_node.py
(+91 files in other folders)
