<?xml version="1.0"?>
<package format="3">
  <name>turtle_move</name>
  <version>0.0.0</version>
  <description>Package for moving turtles in ROS 2</description>
  <maintainer email="jackerick0212@gmail.com">jack</maintainer>
  <license>Apache-2.0</license>

  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>turtlesim</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
